--- a/res/css/style.css
+++ b/res/css/style.css
@@ -57,13 +57,13 @@
 /**/
 @media screen and (max-width: 1280px) {
     .section2 .title {padding: 0 40px;}
-    .section2 .title .title__text {line-height: 150px;}
+    .section2 .title .title__text {font-size: 13vw; line-height: 150px;}
 }
 @media screen and (max-width: 768px) {
-    .section2 .title .title__text {line-height: 100px;}
+    .section2 .title .title__text {font-size: 13vw; line-height: 100px;}
 }
 @media screen and (max-width: 480px) {
-    .section2 .title .title__text {line-height: 60px;}
+    .section2 .title .title__text {font-size: 13vw; line-height: 60px;}
 }
 
 /*section3 page*/
